[package]
name = "ratatui-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.27.0", features = ["event-stream", "serde"] }
log = "0.4.20"
ratatui = { version = "0.23.0", features = ["all-widgets", "serde"] }
serde = { version = "1.0.188", features = ["derive"] }
signal-hook = "0.3.17"

[dev-dependencies]
pretty_assertions = "1.4.0"
